Changes to be committed: 	modified:   .env 	modified:   package-lock.json 	modified:   package.json 	modified:   pages/api/[...nextauth].ts 	new file:   pages/api/register.ts 	modified:   pages/auth.tsx

--- a/.env
+++ b/.env
@@ -4,4 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://vinaydeep26:vinay123@cluster0.mhrneqc.mongodb.net/test"
+DATABASE_URL="mongodb+srv://vinaydeep:vinaydeep@cluster0.cf5sysu.mongodb.net/test"
+NEXTAUTH_JWT_SECRET= "NEXT-JWT-SECRET"
+NEXTAUTH_SECRET="NEXT-SECRET"
