--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^5.1.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "heroicons": "^2.0.17",
     "next": "13.3.4",
     "next-auth": "^4.22.1",
     "react": "18.2.0",
